added option to record for specified duration

--- a/sox_record.html
+++ b/sox_record.html
@@ -10,6 +10,8 @@
             channels: {value:1, required:true},
             rate: {value:16000, required:true},
             bits: {value:16, required:true},
+            durationType: {value:"forever", required:true},
+            durationLength: {value:0, required:true},
             outputFormat: {value:"stream", required:true},
             debugOutput: {value:false, required:true}
         },
@@ -18,6 +20,17 @@
         icon: "font-awesome/fa-microphone",
         label: function() {
             return this.name||"sox-record";
+        },
+        oneditprepare: function() {
+            var node = this;
+            $("#node-input-durationType").on("change", function(){
+                let durVar = $("#node-input-durationType").val();
+                if(durVar == "limited"){
+                    $("#durationLengthWrapper").show();
+                } else {
+                    $("#durationLengthWrapper").hide();
+                }
+            });
         }
     });
 </script>
@@ -60,6 +73,17 @@
         <label for="node-input-bits"><i class="icon-tag"></i>bit-depth</label>
         <input type="number" id="node-input-bits" value="16" />
     </div>
+    <div class="form-row">
+        <label for="node-input-durationType"><i class="icon-tag"></i>record time</label>
+        <select id="node-input-durationType">
+            <option value="forever">record until a stop msg is send</option> 
+            <option value="limited">record for specified amount of seconds</option>
+        </select>
+    </div>
+    <div id="durationLengthWrapper" class="form-row">
+        <label for="node-input-durationLength"><i class="icon-tag"></i>seconds</label>
+        <input type="number" id="node-input-durationLength" value="0" />
+    </div>
     <h4>Output</h4>
     <div class="form-row">
         <label for="node-input-outputFormat"></i>output format</label>
@@ -71,7 +95,7 @@
     <div class="form-row">
         <label for="node-input-debugOutput"></i>debug</label>
         <input type="checkbox" id="node-input-debugOutput" style="display:inline-block; width: auto; vertical-align:baseline;" value="false">
-        <label for="node-input-debugOutput" style="width: 70%;">detailed debug output</label>
+        <label for="node-input-debugOutput" style="width: 70%;">detailed debug info to 2nd output</label>
     </div>   
 </script>
 
