updated help text

--- a/sox_record.html
+++ b/sox_record.html
@@ -143,5 +143,5 @@
 </script>
 
 <script type="text/html" data-help-name="sox-record">
-    <p>A simple wrapper node around the record functionality of the sox commandline tool</p>
+    <p>A simple wrapper node around the record functionality of the sox commandline utility. For detailed usage information please go to <a href="https://github.com/johanneskropf/node-red-contrib-sox-record">node-red-contrib-sox-record</a>.</p>
 </script>
