updated help text

--- a/sox_play.html
+++ b/sox_play.html
@@ -72,5 +72,5 @@
 </script>
 
 <script type="text/html" data-help-name="sox-play">
-    <p></p>
+    <p>A simple wrapper node around the play functionality of the sox commandline utility. For detailed usage information please go to <a href="https://github.com/johanneskropf/node-red-contrib-sox-utils">node-red-contrib-sox-utils</a>.</p>
 </script>
