--- a/sox_record.html
+++ b/sox_record.html
@@ -160,7 +160,7 @@
     <div class="form-row">
         <label for="node-input-outputFormat"></i>output format</label>
         <select id="node-input-outputFormat">
-            <option value="stream">a stream of buffers while recording</option> 
+            <option value="stream">a stream of raw buffers while recording</option> 
             <option value="once">a single raw buffer when recording ends</option>
             <option value="wav">a single wav buffer when recording ends</option>
         </select>
@@ -178,5 +178,5 @@
 </script>
 
 <script type="text/html" data-help-name="sox-record">
-    <p>A simple wrapper node around the record functionality of the sox commandline utility. For detailed usage information please go to <a href="https://github.com/johanneskropf/node-red-contrib-sox-record">node-red-contrib-sox-record</a>.</p>
+    <p>A simple wrapper node around the record functionality of the sox commandline utility. For detailed usage information please go to <a href="https://github.com/johanneskropf/node-red-contrib-sox-utils">node-red-contrib-sox-utils</a>.</p>
 </script>
