added queue mode

--- a/sox_play.html
+++ b/sox_play.html
@@ -62,7 +62,8 @@
         <label for="node-input-startNew"></i>on new input while playing</label>
         <select id="node-input-startNew">
             <option value="skip">ignore new input and keep current playback</option>
-            <option value="start">replace current playback with new input</option> 
+            <option value="start">replace current playback with new input</option>
+            <option value="queue">add new input to queue if already playing</option>
         </select>
     </div>
     <div class="form-row">
@@ -79,6 +80,6 @@
 
 <script type="text/html" data-help-name="sox-play">
     <p><strong>A simple wrapper node around the play functionality of the sox commandline utility.</strong></p>
-    <p>The node will play audio on the machine node-red runs on to the choosen output device from either a wav buffer send to it in the <code>msg.payload</code> or a path to an audio file as a string in the <code>msg.payload</code>. It will output playback information and any debug info in the <code>msg.payload</code> to its output. You can stop the playback at anytime with a <code>msg.payload</code> of <strong>stop</strong>.</p>
+    <p>The node will play audio on the machine node-red runs on to the choosen output device from either a wav buffer send to it in the <code>msg.payload</code> or a path to an audio file as a string in the <code>msg.payload</code>. It will output playback information and any debug info in the <code>msg.payload</code> to its output. You can stop the playback at anytime with a <code>msg.payload</code> of <strong>stop</strong>. When playing in queue mode and there is items in the queue the node also accepts a <code>msg.payload</code> of <strong>clear</strong> to clear the queue or <strong>next</strong> to skip to the next item in the queue. When stopped the queue will be automatically cleared.</p>
     <p><i>For detailed usage information please go to <a href="https://github.com/johanneskropf/node-red-contrib-sox-utils">node-red-contrib-sox-utils</a>.</i></p>
 </script>
