--- a/sox_record.html
+++ b/sox_record.html
@@ -128,7 +128,7 @@
         <input type="number" id="node-input-channels" value="1" />
     </div>
     <div class="form-row">
-        <label for="node-input-rate"><i class="icon-tag"></i>rate</label>
+        <label for="node-input-rate"><i class="icon-tag"></i>sample-rate</label>
         <input type="number" id="node-input-rate" value="16000" />
     </div>
     <div class="form-row">
