updated debug label

--- a/sox_convert.html
+++ b/sox_convert.html
@@ -244,7 +244,7 @@
     <div class="form-row">
         <label for="node-input-debugOutput"></i>debug</label>
         <input type="checkbox" id="node-input-debugOutput" style="display:inline-block; width: auto; vertical-align:baseline;" value="false">
-        <label for="node-input-debugOutput" style="width: 70%;">detailed debug and playpack info</label>
+        <label for="node-input-debugOutput" style="width: 70%;">detailed debug and conversion info</label>
     </div>
     <h4>Name</h4>
     <div class="form-row">
