fixed that a file path had to be present even in buffer mode

--- a/sox_convert.html
+++ b/sox_convert.html
@@ -18,7 +18,7 @@
             name: {value:""},
             conversionType: {value:"wav", required:true},
             outputToFile: {value:"buffer", required:true},
-            manualPath: {value:"", required:true},
+            manualPath: {value:""},
             wavMore: {value:false, required:true},
             wavByteOrder: {value:"-L", required:true},
             wavEncoding: {value:"signed-integer", required:true},
