--- a/sox_record.html
+++ b/sox_record.html
@@ -32,7 +32,7 @@
             silenceThreshold: {value:"2.0", required:true},
             outputFormat: {value:"stream", required:true},
             manualPath: {value:""},
-            debugOutput: {value:false, required:true},
+            debugOutput: {value:false, required:true}
         },
         inputs:1,
         outputs:2,
