--- a/sox_record.html
+++ b/sox_record.html
@@ -49,6 +49,8 @@
                         return 'raw audio buffer when finished';
                     case 'wav':
                         return 'wav buffer when finished';
+                    case 'file':
+                        return 'file path when finished';
                 }
             } else {
                 return 'recording progress info';
