--- a/sox_record.html
+++ b/sox_record.html
@@ -16,7 +16,7 @@
         color: '#c28285',
         defaults: {
             name: {value:""},
-            buttonStart: {value:"msg", requiered:true},
+            buttonStart: {value:"msg", required:true},
             inputs: {value:1},
             inputSource: {value:"default", required:true},
             byteOrder: {value:"-L", required:true},
